# dunena

./: .env.example  .gitignore  AGENT_SUGGESTIONS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  INSTALL.md  LICENSE  README.md  SECURITY.md  bunfig.toml  package.json  tsconfig.base.json  tsconfig.json
.github/: CODEOWNERS  copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml  docs.yml  npm-publish.yml  python.yml  release.yml  static.yml
apps/cli/: package.json
apps/cli/src/: index.ts
apps/docs/: next.config.mjs  package-lock.json  package.json  theme.config.tsx
apps/docs/components/: ApiExplorer.tsx
apps/docs/pages/: _meta.json  api-explorer.mdx  architecture.mdx  cli.mdx  configuration.mdx  (+4 more)
apps/server/: Dockerfile  package.json
deploy/: README.md  docker-compose.yml
deploy/env/: .env.dev  .env.prod  .env.staging
deploy/k8s/: configmap.yaml  deployment.yaml  ingress.example.yaml  namespace.yaml  pvc.yaml  secret.example.yaml  service.yaml
docs/: api.html  cli.html  configuration.html  dashboard.html  getting-started.html  index.html  websocket.html
docs/assets/: nav.js  style.css
scripts/: bump-version.ts  clean.ts  release.ts  update-changelog.ts
scripts/bench/: README.md
sdks/python/: pyproject.toml
sdks/python/dunena/: __init__.py  async_client.py  client.py  exceptions.py  types.py
sdks/python/tests/: test_client.py
zig/: build.zig  build.zig.zon
zig/src/: bloom_filter.zig  cache.zig  compression.zig  exports.zig  stats.zig
(+19 files in other folders)
