[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dunena"
version = "0.3.1"
description = "Official Python SDK for the Dunena cache engine"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "Dunena Contributors" },
]
keywords = ["cache", "dunena", "sdk", "client"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-httpx>=0.21",
]

[project.urls]
Homepage = "https://github.com/PowenCu/dunena"
Documentation = "https://github.com/PowenCu/dunena#api-reference"
Repository = "https://github.com/PowenCu/dunena"
Issues = "https://github.com/PowenCu/dunena/issues"
